--- a/design/templates/OpenGame/eco_queue.tpl.html
+++ b/design/templates/OpenGame/eco_queue.tpl.html
@@ -17,6 +17,9 @@
 <script type="text/javascript"><!--
 sn_timers.unshift({'id': '{$QUE_HTML}_{$QUE_ID}', 'type': TIMER_BUILD_QUE_V2, 'options': {
   'msg_done': '{LA_eco_que_empty}',
+  <!-- IF $IN_NAVBAR_HUMAN -->
+  displayType:'human',
+  <!-- ENDIF -->
   // 'url': document.location.href,
   'template': '<div class="que_item {$QUE_HTML}_{$QUE_ID}_container_[UNIT_QUE_PLACE] que_item_[UNIT_QUE_PLACE]" title="[UNIT_NAME] ([UNIT_LEVEL])">\
     <span class="que_unit_picture"><img src="[UNIT_IMAGE]" align="top" width="100%" height="100%"></span>\
