CODE-misc-46a35: Replaced physical and HTTP path to avatars with constants

--- a/design/templates/OpenGame/ali_admin.tpl.html
+++ b/design/templates/OpenGame/ali_admin.tpl.html
@@ -33,7 +33,7 @@
         <!-- ENDIF -->
         <!-- IF ALLY_IMAGE -->
         <div align="center">
-          <img src="{D_SN_ROOT_VIRTUAL}/images/avatar/ally_{ALLY_ID}.png" alt="logo"/><br/>
+          <img src="{D_SN_HTTP_AVATAR}/ally_{ALLY_ID}.png" alt="logo"/><br/>
           <input name="avatar_remove" type="checkbox" id="avatar_remove"/><label for="avatar_remove">{L_opt_avatar_remove}</label>
         </div>
         <!-- ELSE -->
