--- a/design/templates/OpenGame/ali_info.tpl.html
+++ b/design/templates/OpenGame/ali_info.tpl.html
@@ -25,7 +25,7 @@
       <!-- ENDIF -->
     </th>
   </tr>
-  <tr><th width=150>{L_Tag}</th><th>{ally_tag}</th><!-- IF ally_image --><th rowspan="<!-- IF ALLY_DESCRIPTION -->5<!-- ELSE -->4<!-- ENDIF -->" valign="top"><img src="{D_SN_ROOT_VIRTUAL}/images/avatar/ally_{ally_id}.png"></th><!-- ENDIF --></tr>
+  <tr><th width=150>{L_Tag}</th><th>{ally_tag}</th><!-- IF ally_image --><th rowspan="<!-- IF ALLY_DESCRIPTION -->5<!-- ELSE -->4<!-- ENDIF -->" valign="top"><img src="{D_SN_HTTP_AVATAR}/ally_{ally_id}.png"></th><!-- ENDIF --></tr>
   <tr><th>{L_Name}</th><th>{ally_name}</th></tr>
   <tr><th>{L_Main_Page}</th><th><a href="{ally_web}">{ally_web}</a></th></tr>
   <tr>
