--- a/design/templates/OpenGame/imperator.tpl.html
+++ b/design/templates/OpenGame/imperator.tpl.html
@@ -4,7 +4,7 @@
 
       <h3>{L_sys_from} {REGISTRATION_DATE}</h3>
 
-      <!-- IF USER_AVATAR --><img src="{D_SN_ROOT_VIRTUAL}/images/avatar/avatar_{USER_ID}.png"><!-- ENDIF -->
+      <!-- IF USER_AVATAR --><img src="{D_SN_HTTP_AVATAR}/avatar_{USER_ID}.png"><!-- ENDIF -->
       <h2 class="link">
         <a href="stat.php?start={user_rank}">
           {L_ov_rank}:
