--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -222,7 +222,7 @@
             <label for="avatar">{L_opt_upload}</label>&nbsp;<input type="file" name="avatar" size="26" id="avatar" /><br />
             <div>
               <!-- IF opt_avatar -->
-              <img src="{D_SN_ROOT_VIRTUAL}/images/avatar/avatar_{USER_ID}.png"><br />
+              <img src="{D_SN_HTTP_AVATAR}/avatar_{USER_ID}.png"><br />
               <input name="avatar_remove" type="checkbox" id="avatar_remove" /><label for="avatar_remove">{L_opt_avatar_remove}</label>
               <!-- ELSE -->
               <a href="http://www.google.com.ar/imghp" target="_blank">{L_opt_avatar_search}</a>
