--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -256,7 +256,7 @@ uni_row[{galaxyrow.PLANET_NUM}] = {
       </tr>
       <tr>
         <td class="c_c" style="[HIDE_USER_AVATAR]">
-          <div><img src="{D_SN_ROOT_VIRTUAL}images/avatar/avatar_[USER_ID].png" style="width: 9em;" /></div>
+          <div><img src="{D_SN_HTTP_AVATAR}/avatar_[USER_ID].png" style="width: 9em;" /></div>
         </td>
         <td class="c_c" user_id="[USER_ID]">
           <div class="button_pseudo" go="stat" rank="[USER_RANK]">
@@ -285,7 +285,7 @@ uni_row[{galaxyrow.PLANET_NUM}] = {
       </tr>
       <tr>
         <td class="c_c" rowspan="4" style="[HIDE_ALLY_AVATAR]">
-          <img src="{D_SN_ROOT_VIRTUAL}images/avatar/ally_[ALLY_ID].png" style="width: 9em;" />
+          <img src="{D_SN_HTTP_AVATAR}/ally_[ALLY_ID].png" style="width: 9em;" />
         </td>
         <td class="c_c">
           {L_gal_sys_members}&nbsp;[ALLY_MEMBERS]
