--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -4090,3 +4090,29 @@ td.error_message {
   text-wrap: none;
   white-space: nowrap;
 }
+
+
+.ui-icon,
+.ui-widget-content .ui-icon {
+	background-image: url("/design/css/images/ui-icons_e6ebfb_256x240.png");
+}
+.ui-widget-header .ui-icon {
+	background-image: url("/design/css/images/ui-icons_13233E_256x240.png");
+}
+.ui-state-default .ui-icon {
+	background-image: url("/design/css/images/ui-icons_e6ebfb_256x240.png");
+}
+.ui-state-hover .ui-icon,
+.ui-state-focus .ui-icon {
+	background-image: url("/design/css/images/ui-icons_e6ebfb_256x240.png");
+}
+.ui-state-active .ui-icon {
+	background-image: url("/design/css/images/ui-icons_e6ebfb_256x240.png");
+}
+.ui-state-highlight .ui-icon {
+	background-image: url("/design/css/images/ui-icons_2e83ff_256x240.png");
+}
+.ui-state-error .ui-icon,
+.ui-state-error-text .ui-icon {
+	background-image: url("/design/css/images/ui-icons_ff0000_256x240.png");
+}
