--- a/design/templates/OpenGame/_page/navbar_buttons.tpl.html
+++ b/design/templates/OpenGame/_page/navbar_buttons.tpl.html
@@ -43,50 +43,44 @@
 <!-- ENDIF -->
 
 <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_EXPEDITIONS -->
-<div class="navbar_button" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
+<div class="navbar_button" alt="{L_sys_expeditions}" title="{L_sys_expeditions}" go_url="fleet.php">
   <span class="posLT sprite_navbar_buttons navbar_expedition_button"></span>
-  <a href="fleet.php">
     <span id="topnav_expedition_counter_total" class="a50 posRB w100">
       <span id='topnav_expedition_counter'>{TOPNAV_EXPEDITIONS_FLYING}</span>/{TOPNAV_EXPEDITIONS_TOTAL}
     </span>
     <span class="posLT w100 a50">
       {L_navbar_button_expeditions_short}
     </span>
-  </a>
 </div>
 <!-- ENDIF -->
 
 <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_FLYING_FLEETS -->
-<div class="navbar_button" alt="{L_sys_fleets}" title="{L_sys_fleets}">
+<div class="navbar_button" alt="{L_sys_fleets}" title="{L_sys_fleets}" go_url="flying_fleets.php">
   <span class="posLT sprite_navbar_buttons navbar_fleet_own_button"></span>
-  <a href="flying_fleets.php">
     <span id="topnav_fleet_counter_total" class="a50 posRB w100">
       <span id='topnav_fleet_counter'>{TOPNAV_FLEETS_FLYING}</span>/{TOPNAV_FLEETS_TOTAL}
     </span>
     <span class="posLT w100 a50">{L_navbar_button_fleets}</span>
-  </a>
 </div>
 <!-- ENDIF -->
 
 <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_QUESTS && ! GAME_QUESTS_DISABLED -->
-<div class="navbar_button" alt="{L_qst_quests}" title="{L_qst_quests}">
+<div class="navbar_button" alt="{L_qst_quests}" title="{L_qst_quests}" go_url="quest.php">
   <span class="posLT sprite_navbar_buttons navbar_quest_button"></span>
-  <a href="quest.php">
     <span class="a50 posRB w100">
       <span class="notice">{TOPNAV_QUEST_IN_PROGRESS}</span>/<span class="success">{TOPNAV_QUEST_COMPLETE}</span>/{C_quest_total}
     </span>
     <span class="posLT w100 a50">{L_navbar_button_quests}</span>
-  </a>
 </div>
 <!-- ENDIF -->
 
-<div class="navbar_button" alt="{L_Message}" title="{L_Message}">
+<div class="navbar_button" alt="{L_Message}" title="{L_Message}" go_url="messages.php">
   <span class="posLT sprite_navbar_buttons navbar_mail_button"></span>
-  <a href="messages.php" alt="{L_msg_class[D_MSG_TYPE_NEW]}" title="{L_msg_class[D_MSG_TYPE_NEW]}">
+  <span href="messages.php" alt="{L_msg_class[D_MSG_TYPE_NEW]}" title="{L_msg_class[D_MSG_TYPE_NEW]}">
     <div class="posRB">
       <!-- IF TOPNAV_MESSAGES_ALL --><span class="blink" duration="2000">[{TOPNAV_MESSAGES_ALL}]</span><!-- ELSE -->0<!-- ENDIF -->
     </div>
-  </a>
+  </span>
   <!-- IF TOPNAV_MESSAGES_PLAYER -->
   <a href="messages.php?mode=show&message_class={D_MSG_TYPE_PLAYER}" alt="{L_msg_class[D_MSG_TYPE_PLAYER]}" title="{L_msg_class[D_MSG_TYPE_PLAYER]}">
     <span class="posLT"><span class="mnl_joueur">[{TOPNAV_MESSAGES_PLAYER}]</span></span>
@@ -104,9 +98,8 @@
   <!-- ENDIF -->
 </div>
 
-<div class="navbar_button" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
+<div class="navbar_button" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}" go_url="dark_matter.php">
   <span class="posLT sprite_navbar_buttons navbar_dark_matter_button"></span>
-  <a href="dark_matter.php">
     <!-- IF TOPNAV_METAMATTER -->
     <span id="navbar_button_dm_mm" class="a50 metamatter posRB">{TOPNAV_METAMATTER_TEXT}</span>
     <span id="navbar_button_dm_dm" class="a50 dark_matter posRB js_dark_matter_plain">{TOPNAV_DARK_MATTER_PLAIN_TEXT}</span>
@@ -115,16 +108,13 @@
     <!-- ENDIF -->
     <span class="a50 ok posRB {$NAVBAR_DEBIT_LINE_CLASS} js_dark_matter_full">{TOPNAV_DARK_MATTER_TEXT}</span>
     <span class="posLT w100 a50">{L_sys_dark_matter_sh}</span>
-  </a>
 </div>
 
 <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_META_MATTER && TOPNAV_PAYMENT -->
-<div class="navbar_button" alt="{L_sys_metamatte}" title="{L_sys_metamatter}">
+<div class="navbar_button" alt="{L_sys_metamatte}" title="{L_sys_metamatter}" go_url="metamatter.php">
   <span class="posLT sprite_navbar_buttons navbar_metamatter_button"></span>
-  <a href="metamatter.php">
     <span class="a50 posRB metamatter">{TOPNAV_METAMATTER_TEXT}</span>
     <span class="posLT w100 a50">{L_sys_metamatter_sh}</span>
-  </a>
 </div>
 <!-- ENDIF -->
 
