NAVBAR-fix-46a110: Fixed error reposition que in navbar buttons

--- a/design/templates/OpenGame/_page/navbar_buttons.tpl.html
+++ b/design/templates/OpenGame/_page/navbar_buttons.tpl.html
@@ -3,10 +3,10 @@
 
   <!-- IF PLAYER_OPTION_NAVBAR_RESEARCH_WIDE -->
     <!-- DEFINE $NAVBAR_QUE_WIDE = 'wide' -->
-    <!-- DEFINE $NAVBAR_QUE_CLASS = 'sprite_navbar_buttons navbar_research_button_wide' -->
+    <!-- DEFINE $NAVBAR_QUE_CLASS = 'posLT sprite_navbar_buttons navbar_research_button_wide' -->
     <!-- DEFINE $NAVBAR_QUE_NAME = '{L_sys_que_research}' -->
   <!-- ELSE -->
-    <!-- DEFINE $NAVBAR_QUE_CLASS = 'sprite_navbar_buttons navbar_research_button' -->
+    <!-- DEFINE $NAVBAR_QUE_CLASS = 'posLT sprite_navbar_buttons navbar_research_button' -->
     <!-- DEFINE $NAVBAR_QUE_NAME = '{L_sys_que_research_short}' -->
   <!-- ENDIF -->
   <!-- DEFINE $NAVBAR_QUE_HINT = '{L_Research}' -->
@@ -34,7 +34,7 @@
 <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_HANGAR && ! GAME_HANGAR_DISABLED -->
   <!-- DEFINE $QUE_ID = '{SUBQUE_FLEET}' -->
 
-  <!-- DEFINE $NAVBAR_QUE_CLASS = 'sprite_navbar_buttons navbar_hangar_button' -->
+  <!-- DEFINE $NAVBAR_QUE_CLASS = 'posLT sprite_navbar_buttons navbar_hangar_button' -->
   <!-- DEFINE $NAVBAR_QUE_NAME = '{L_sys_que_hangar}' -->
   <!-- DEFINE $NAVBAR_QUE_HINT = '{L_Shipyard}' -->
   <!-- DEFINE $NAVBAR_QUE_URL = 'buildings.php?mode={D_SUBQUE_FLEET}' -->
