--- a/design/templates/OpenGame/fleet_miniatures.tpl.html
+++ b/design/templates/OpenGame/fleet_miniatures.tpl.html
@@ -52,7 +52,7 @@
 
   <div id="fleet_unit_miniatures_container">
     <!-- BEGIN ships -->
-    <div class="unit_miniatures_wrapper">
+    <div class="unit_miniatures_wrapper" unit_id="{ships.ID}">
       <img src="{I_[ships.ID]}" style="width: 100%; height: 100%;" />
       <!--<img id="unit_info_image" />-->
       <div style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;">
