--- a/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
+++ b/design/templates/OpenGame/mrc_mercenary_hire.tpl.html
@@ -49,7 +49,7 @@ function mrc_change(mercenary_id)
 
     <tr>
       <th width=120>
-        <div style="width: 11em; height: 11em; position: relative;">
+        <div style="width: 11em; height: 11em; position: relative;" class="tech_image" unit_id="{officer.ID}">
           <img src="{I_[officer.ID]}" class="posLT w100" />
           <span class="posLT w100 a50">{officer.NAME}</span>
           <!-- !IF officer.LEVEL || officer.LEVEL_BONUS -->
